added proper gitignore because i've been trying this eclipse thing for just an hour and already got sick of it

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ project/plugins/project/
 .scala_dependencies
 .worksheet
 /bin/
-
-.classpath
 .cache-main
-*.cache-tests
+.cache-tests
+.classpath
+.project
+project
+.settings
+.settings/*
